--- a/blog/2022-12-06-day2.md
+++ b/blog/2022-12-06-day2.md
@@ -16,15 +16,15 @@ tags: [training, dotNET, docusaurus]
 
 ## Visual Studio
 - Helpful Shortcuts
-    - Ctrl + . -> troubleshoot
-    - Ctrl + , -> search console
-    - Ctrl + r, a -> run all tests
-    - Ctrl + r, t -> run selected test
-    - Ctrl + F5 -> Kill command
-    - F12 -> go to definition
-    - Ctrl + - -> go back
-    - Ctrl + r, Ctrl + C -> comment
-    - Alt + F12 -> Code peek(opens modal)
+    - Ctrl + . => troubleshoot
+    - Ctrl + , => search console
+    - Ctrl + r, a => run all tests
+    - Ctrl + r, t => run selected test
+    - Ctrl + F5 => Kill command
+    - F12 => go to definition
+    - Ctrl + - => go back
+    - Ctrl + r, Ctrl + C => comment
+    - Alt + F12 => Code peek(opens modal)
 
 ## Value Types and Reference Types
 - Stack and the Heap
