--- a/blog/2022-12-07-day3.md
+++ b/blog/2022-12-07-day3.md
@@ -7,8 +7,24 @@ tags: [training, dotNET, docusaurus]
 
 # Day 2 of Intro to Programming
 
-## Vercel
-- Great resource for deploying applications
-- Can be mapped to purchased domain
-- Works with over 30 Frameworks including Vue and React
-- Autonomously pulls changes from connected github repo
+## In Visual Studio
+- Ctrl + D => Copy selected line below
+- Ctrl + . => Fixes everything (Just kidding, but not really)
+
+
+## Definitions
+- State: Value of all data in a module
+- Ternary Operator: Shorthand way to wite an if else statement '''(condition ? statement 1 : statement 2)'''
+- JFHCI: Just Hard Code It (not Jacksonville, Fl Hardcore Initiative)
+- Inheritance: Allows class to be created from existing class
+- Feedback Loop: 
+    - Inner Loop: Everything that happens while you write code
+    - Outer Loop: Everrything that happens after we push
+-Enum: Enumeration type, value type defined by a set of named constants (unchangeable/read-only variables)
+- Invariance: The type to be assigned and the type assigned must be the same. This means that there is no switch between a Child (More Derived) type and a Parent (Less Derived) type.
+
+## Tips and Tricks
+- Avoid if statements when possible
+- Write code in a way that after ir ships you don't have to modify it
+- Download Moq for Visual Studio
+- Make invalid statements impossible
