remebered tip about morning algos

--- a/blog/2022-12-07-day3.md
+++ b/blog/2022-12-07-day3.md
@@ -28,3 +28,5 @@ tags: [training, dotNET, docusaurus]
 - Write code in a way that after ir ships you don't have to modify it
 - Download Moq for Visual Studio
 - Make invalid statements impossible
+- Do morning algorithms to stretch your brain
+
