--- a/blog/2022-12-07-day3.md
+++ b/blog/2022-12-07-day3.md
@@ -19,7 +19,7 @@ tags: [training, dotNET, docusaurus]
 - Inheritance: Allows class to be created from existing class
 - Feedback Loop: 
     - Inner Loop: Everything that happens while you write code
-    - Outer Loop: Everrything that happens after we push
+    - Outer Loop: Everything that happens after we push
 -Enum: Enumeration type, value type defined by a set of named constants (unchangeable/read-only variables)
 - Invariance: The type to be assigned and the type assigned must be the same. This means that there is no switch between a Child (More Derived) type and a Parent (Less Derived) type.
 
