fixed header tags/slug for day 3 blog post

--- a/blog/2022-12-07-day3.md
+++ b/blog/2022-12-07-day3.md
@@ -1,8 +1,8 @@
 ---
-slug: intro-day2
-title: Day 2 of Intro to Programming
+slug: intro-day3
+title: Day 3 of Intro to Programming
 author: TJ
-tags: [training, dotNET, docusaurus]
+tags: [training, dotNET, C#, TDD]
 ---
 
 # Day 2 of Intro to Programming
