--- a/blog/2022-12-07-day3.md
+++ b/blog/2022-12-07-day3.md
@@ -13,14 +13,14 @@ tags: [training, dotNET, C#, TDD]
 
 
 ## Definitions
-- State: Value of all data in a module
-- Ternary Operator: Shorthand way to wite an if else statement '''(condition ? statement 1 : statement 2)'''
+- State: Value of all data in a module 
+- Ternary Operator - Shorthand if else statement ```(condition ? statement 1 : statement 2)```
 - JFHCI: Just Hard Code It (not Jacksonville, Fl Hardcore Initiative)
 - Inheritance: Allows class to be created from existing class
 - Feedback Loop: 
     - Inner Loop: Everything that happens while you write code
     - Outer Loop: Everything that happens after we push
--Enum: Enumeration type, value type defined by a set of named constants (unchangeable/read-only variables)
+- Enum: Enumeration type, value type defined by a set of named constants (unchangeable/read-only variables)
 - Invariance: The type to be assigned and the type assigned must be the same. This means that there is no switch between a Child (More Derived) type and a Parent (Less Derived) type.
 
 ## Tips and Tricks
