added new day tempalte

--- a/blog/2022-12-07-day3.md
+++ b/blog/2022-12-07-day3.md
@@ -1,8 +1,8 @@
 ---
-slug: intro-day2
-title: Day 2 of Intro to Programming
+slug: intro-day3
+title: Day 3 of Intro to Programming
 author: TJ
-tags: [training, dotNET, docusaurus]
+tags: [training, dotNET, C#, TDD]
 ---
 
 # Day 2 of Intro to Programming
@@ -11,4 +11,4 @@ tags: [training, dotNET, docusaurus]
 - Great resource for deploying applications
 - Can be mapped to purchased domain
 - Works with over 30 Frameworks including Vue and React
-- Autonomously pulls changes from connected github repo
+- Autonomously pulls changes from connected github repogit status
