added template for day 5

--- a/blog/2022-12-08-day4.md
+++ b/blog/2022-12-08-day4.md
@@ -6,3 +6,12 @@ tags: [training, dotNET, C#, TDD]
 ---
 
 # Day 4 of intro to programming
+
+
+## CUPID
+
+## SOLID
+
+## Test Principals
+
+## C# Syntax
