Added day 4 notes

--- a/blog/2022-12-08-day4.md
+++ b/blog/2022-12-08-day4.md
@@ -9,9 +9,55 @@ tags: [training, dotNET, C#, TDD]
 
 
 ## CUPID
-
+    - Composible
+        - prefer composition over inheritance
+        - Emphasize encapsulation: What is more important than how
+    - Unix Philosophy
+        - Small focused bits of Functionality
+    - Predictable 
+        - Follows the principal of Least suprise
+    - Idiomatic 
+        - Feels Natural: use language and idioms of that language
+    - Domain based
+        - Be wary of spending time solving issues beyond the requirements
 ## SOLID
-
+    - SRP: Single responsibilty principal
+        - Code should have a single axis of change
+    - Open/Close
+        - Code should be open to extension and closed to modification
+    - Liskov Substitution Principal
+        - Prefer composition over inheritance
+    - Interface Segregation Principal
+        - depend on small client specific interfaces
+    - Dependency Inversion Principal
+        - Rely on what not how
+        - Depend on abstractions not concretions
 ## Test Principals
+    - Feedback Loops
+        - Static loops
+            - Fastest feedback
+            - Linterss
+            - Compilers
+            - won't let you run code with errors
+        - Unit Tests
+            - Designed to be a little slower than compiler
+            - Short is sweet, should run quickly to be most effective
+        - Integration test
+            - test external systems reaction
+            - DataBase, FileSystems, etc
+            - Automate users
+            - Slower and run leess frequently
+        - End to End testing
+            - "Real" tests
+            - nothing is faked aside from user
 
-## C# Syntax
+## Test Doubles
+    - Why use them
+        - Need to test against systems, services, and libraries that don't exist yet
+        - Simulate events in production environment
+    - Types of Doubles
+        - Dummies: not really for testing, used when testing something something outside of code
+        - Stubs: for state based testing(when you query for a dependancy), dependancy is a state change 
+        - Mocks: for interaction testing "tell don't ask" the response
+        - Fakes: replace and simullate real but expensive things(i.e. databases)
+        
