Added Day 5 blog and fixed some styling

--- a/blog/2022-12-09-day5.md
+++ b/blog/2022-12-09-day5.md
@@ -4,3 +4,48 @@ title: Day 5 of Intro to Programming
 author: TJ
 tags: [training, dotNET, C#, TDD]
 ---
+
+# Day 5 of Intro to Programming
+
+## C# Syntax
+- Objects
+    - Building blocks of C#
+    - Objects defined by entities, valus, and services
+        - Entities are in some way specific
+        - Values: objects are compared to other objects based on values
+        - Services are something that provide funtionality to an object
+    - All functions must be assigned to objects
+    - Strings are immutable
+    - Init keyword: only able to set on initialization
+    - Required keyword: when added to constructor makes it required to initialize
+- IEnumerable
+    - Interface defining a single method that enumerates item
+    - Still need to look further into this
+- Continue keyword
+    - used to skip execution step when used in a loop    
+- Select keyword
+    - works similar to a .map in javaScript
+- .where
+    - takes integer and returns a boolean
+- .parse
+    - takes a string and returns an integer
+- Delegate
+    - Unique object in .net
+    - represents refrences to method with a particular parameter list and returns a type
+    - Works as a kind of go between
+- Extension method
+    - isn't a real method but works like one
+    - All of the class has to be static
+    - Have to add "this" keyword to method
+    - must be in same namespace
+- List is an array that takes a single datatype
+## C# Practices
+- Defensive Coding
+    - Old thought: define and validate everything
+    - New thought: Don't validate unless necessary
+- When experincing an error write two tests
+    - First proves the problem 
+    - Second to prove the fix
+- .Net 6 Added implicit using
+- Single letter variables usually used in anonomous function
+- Strings are Immutable in .Net
